email field added in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,6 +36,10 @@
         <td><%- content.address %></td>
       </tr>
       <tr>
+        <td>Email</td>
+        <td><%- content.email %></td>
+      </tr>
+      <tr>
         <td>Amount paid</td>
         <td><%- content.amount %> /-</td>
       </tr>
